bug/fix wrong background color

--- a/public/css/account.css
+++ b/public/css/account.css
@@ -1,5 +1,6 @@
 #account-page {
-    margin: 90px 150px;
+    padding: 90px 150px;
+    background-color: var(--backgroundLight);
 }
 
 #account-page h1 {
